deploy: 3634f3a9eb25f99bc1bfdde9363151c20a6513ac

--- a/contracts/index.html
+++ b/contracts/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Released COVID-19 Response Contracts</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 5:34 PM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 5:43 PM</p>
           
         </div>
       </div>
@@ -481,7 +481,7 @@
       <div class="card-body">
 <ul><li>Kaiser Foundation Hospitals, Dignity Health, Los Angeles County Department of Health: <a href="https://files.covid19.ca.gov/pdf/Kaiser-dignity-LA-county-CDPH.pdf">Kaiser-dignity-LA-county-CDPH (PDF)</a></li></ul>
 <ul><li>Leland Stanford Junior University (Board of Trustees): <a href="https://files.covid19.ca.gov/pdf/Leland-stanford-junior-university-CDT.pdf">Leland-stanford-junior-university-CDT (PDF)</a></li></ul>
-<ul><li>Logistics Health, Inc: <a href="https://files.covid19.ca.gov/pdf/Logistics-health-inc-CDPH.pdf">Logistics-health-inc-CDPH (PDF)</a></li><li>Logistics Health, Inc (Amendment): <a href="https://files.covid19.ca.gov/pdf/Logistics-health-inc-CDPH-amendment.pdf">Logistics-health-inc-CDPH-amendment (PDF)</a></li><li>Logistics Health, Inc (Amendment): <a href="https://files.covid19.ca.gov/pdf/Logistics-health-inc-CDPH-amendment-2.pdf">Logistics-health-inc-CDPH-amendment-2 (PDF)</a></li></ul>
+<ul><li>Logistics Health, Inc: <a href="https://files.covid19.ca.gov/pdf/Logistics-health-inc-CDPH.pdf">Logistics-health-inc-CDPH (PDF)</a></li><li>Logistics Health, Inc (Amendment): <a href="https://files.covid19.ca.gov/pdf/Logistics-health-inc-CDPH-amendment.pdf">Logistics-health-inc-CDPH-amendment (PDF)</a></li><li>Logistics Health, Inc (Amendment): <a href="https://files.covid19.ca.gov/pdf/Logistics-health-inc-CDPH-amendment-2.pdf">Logistics-health-inc-CDPH-amendment-2 (PDF)</a></li><li>Logistics Health, Inc: <a href="https://files.covid19.ca.gov/pdf/Logistics-health-inc-CDPH-2.pdf">Logistics-health-inc-CDPH-2 (PDF)</a></li></ul>
 <ul><li>Matchstick Communications: <a href="https://files.covid19.ca.gov/pdf/Matchstick-CHHS-OSG.pdf">Matchstick-CHHS-OSG (PDF)</a></li></ul>
 <ul><li>MAXIMUS Health Services, Inc: <a href="https://files.covid19.ca.gov/pdf/Maximus-health-inc-CDPH.pdf">Maximus-health-inc-CDPH (PDF)</a></li><li>MAXIMUS Health Services, Inc (Amendment): <a href="https://files.covid19.ca.gov/pdf/Maximus-health-inc-CDPH-amendment.pdf">Maximus-health-inc-CDPH-amendment (PDF)</a></li></ul>
 <ul><li>McGrath&#8217;s Catering: <a href="https://files.covid19.ca.gov/pdf/Mcgraths-catering-DGS.pdf">Mcgraths-catering-DGS (PDF)</a></li></ul>
