--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;7 tháng 12, 2020 lúc 18:01</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;7 tháng 12, 2020 lúc 19:33</p>
           
         </div>
       </div>
@@ -179,6 +179,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43956 -->December 7, 2020</small></p>
           <div class="card-text" lang="en-US">New digital tool will officially launch on December 10, allowing Apple and Google smart phone users to help slow the spread by opting in to receive COVID-19 exposure alerts letting them know when they’ve come into contac...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-326.aspx" lang="en-US" hreflang="en-US">​​State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--91d831566949484aa998ac183cc36759 -->December 6, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today  announced the most recent statistics on COVID-19, including data on intensive care unit (ICU) capacity across the state.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
