deploy: 013e590fc19d2757f03a6c1d842c07d2294bb00f

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 4:22 PM</p>
+            <p class="small-text">Last updated&nbsp;December 7, 2020 at 9:51 PM</p>
           
         </div>
       </div>
@@ -219,7 +219,7 @@
 
 
 
-<p>This will be followed by essential workers, who are Californians critical to our daily existence and those at highest risk of becoming infected, severely ill, or spreading COVID-19.   </p>
+<p>This will be followed by essential workers, who are Californians critical to our daily existence and those at highest risk of becoming infected, severely ill, or spreading COVID-19. &nbsp;&nbsp;</p>
 
 
 
@@ -271,7 +271,7 @@
 
 
 
-<p>None of the COVID-19 vaccines under development can cause COVID-19. There are several different types of vaccines in development. However, the goal for each of them is to teach our immune systems how to fight the virus that causes COVID-19. Learn more about <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/about-vaccines/how-they-work.html">how COVID-19 vaccines work</a>.</p>
+<p>COVID-19 vaccination can’t cause COVID-19. The goal of the vaccines  is to teach our immune systems how to fight the virus that causes COVID-19. Learn more about <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/about-vaccines/how-they-work.html">how COVID-19 vaccines work</a>.</p>
 
 
 
@@ -279,7 +279,7 @@
 
 
 
-<p>Vaccines currently in clinical trials in the United States won’t cause you to test positive on <a href="https://www.cdc.gov/coronavirus/2019-ncov/testing/diagnostic-testing.html">viral tests</a>, which are used to see if you have a current infection.</p>
+<p>Vaccines won’t cause you to test positive on <a href="https://www.cdc.gov/coronavirus/2019-ncov/testing/diagnostic-testing.html">viral tests</a>, which are used to see if you have a current infection.</p>
 
 
 
@@ -291,7 +291,7 @@
 
 
 
-<p>Due to the severe health risks associated with COVID-19 and the fact that re-infection with COVID-19 is possible, people may be advised to get a COVID-19 vaccine even if they have been sick with COVID-19 before.</p>
+<p>People are advised to get a COVID-19 vaccine even if they have been sick with COVID-19 before. This is due to the severe health risks associated with COVID-19 and the fact that re-infection with COVID-19 is possible.</p>
 
 
 
@@ -324,12 +324,22 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Yes. While experts learn more about the protection that COVID-19 vaccines provide under real-life conditions, it will be important for everyone to continue using all the tools available to us to help stop this pandemic, like wearing masks, washing hands often, and social distancing. Together, COVID-19 vaccination and recommendations for <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html">how to protect yourself and others</a> will offer the best protection from getting and spreading COVID-19. We need to understand more about the protection that COVID-19 vaccines provide before we change recommendations on mask use.</p>
+<p>Yes. How much protection the COVID-19 vaccines provide under real-life conditions is still unknown. It is important for everyone to continue using all the tools available to us to help stop this pandemic, like:</p>
+<ul><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html"><strong>Staying home and isolating</strong></a><strong> from others when sick</strong></li><li>Wearing masks&nbsp;</li><li>Washing hands often</li><li>Social distancing</li></ul>
+<p> Together, COVID-19 vaccination and recommendations for <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html">how to protect yourself and others</a> will offer the best protection from getting and spreading COVID-19. We need to understand more about the protection that COVID-19 vaccines provide before we change recommendations on mask use.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
@@ -370,7 +380,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Vaccines purchased with U.S. taxpayer dollars will be given to the American people at no cost. Vaccination providers will be able to charge an administration fee to those who can afford to pay it or bill an insurance company.</p>
+<p>Vaccines purchased with U.S. taxpayer dollars will be given to the American people at no cost. </p>
 
       </div>
     </div>
@@ -393,14 +403,24 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>CDC and FDA encourage the public to report possible side effects (called adverse events) to the <a href="https://vaers.hhs.gov/reportevent.html">Vaccine Adverse Event Reporting System (VAERS)</a>. This national system collects these data to look for adverse events that are unexpected, appear to happen more often than expected, or have unusual patterns of occurrence. Learn about the <a href="https://www.cdc.gov/vaccinesafety/ensuringsafety/sideeffects/index.html">difference between a vaccine side effect and an adverse event</a>. Reports to VAERS help the CDC monitor the safety of vaccines. Safety is a top priority.</p>
-<p>Healthcare providers will be required to report certain adverse events following vaccination to VAERS. Healthcare providers also have to adhere to any revised safety reporting requirements according to FDA’s conditions of authorized use throughout the duration of any Emergency Use Authorization. These requirements would be posted on <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">FDA’s website.</a></p>
+<p>The CDC and FDA encourage the public to report possible side effects (called adverse events) to the <a href="https://vaers.hhs.gov/reportevent.html">Vaccine Adverse Event Reporting System (VAERS)</a>. This national system collects these data to look for:</p>
+<ul><li>Adverse events that are unexpected</li><li>Appear to happen more often than expected</li><li>Have unusual patterns of occurrence</li></ul>
+<p>Learn about the <a href="https://www.cdc.gov/vaccinesafety/ensuringsafety/sideeffects/index.html">difference between a vaccine side effect and an adverse event</a>. Reports to VAERS help the CDC monitor the safety of vaccines. Safety is a top priority.</p>
+<p>Healthcare providers are required to report certain adverse events following vaccination to VAERS. Healthcare providers also have to adhere to any revised safety reporting requirements according to FDA’s conditions of authorized use throughout the duration of any Emergency Use Authorization. These requirements would be posted on <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">FDA’s website.</a></p>
 <p>CDC is also implementing a new smartphone-based tool called <a href="https://www.cdc.gov/vaccines/acip/meetings/downloads/slides-2020-09/COVID-03-Shimabukuro.pdf">v-safe</a> to check-in on people’s health after they receive a COVID-19 vaccine. When you receive your vaccine, you should also receive an information sheet telling you how to enroll in v-safe. If you enroll, you will receive regular text messages directing you to surveys where you can report any problems or adverse reactions you have after receiving a COVID-19 vaccine.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
