deploy: 04be0a035e8985bfdf5b78a49fb98f6f5c84822e

--- a/treatment-for-covid-19/index.html
+++ b/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Treatment</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 5:57 PM</p>
+            <p class="small-text">Last updated&nbsp;December 8, 2020 at 5:11 AM</p>
           
         </div>
       </div>
@@ -195,7 +195,7 @@
 
 
 
-<ul><li>The Food and Drug Administration (FDA) has approved one drug, remdesivir (Veklury), to treat COVID-19.</li><li>The FDA can also issue <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">emergency use authorizations </a>(EUAs) to allow healthcare providers to use products that are not yet approved, or that are approved for other uses, to treat patients with COVID-19 if certain requirements are met.</li><li>The National Institutes of Health (NIH) has developed and regularly updates <a href="https://www.covid19treatmentguidelines.nih.gov/introduction/">Treatment Guidelines </a>to help guide healthcare providers caring for patients with COVID-19, including when clinicians might consider using one of the products under an EUA.</li></ul>
+<ul><li>The Food and Drug Administration (FDA) has approved one drug, remdesivir (Veklury), to treat COVID-19.</li><li>The FDA can also issue <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">emergency use authorizations </a>(EUAs) to allow healthcare providers to use products that are not yet approved, or that are approved for other uses, to treat patients with COVID-19 if certain requirements are met.</li><li>The National Institutes of Health (NIH) has developed and regularly updates <a href="https://www.covid19treatmentguidelines.nih.gov/introduction/">Treatment Guidelines</a> to help guide healthcare providers caring for patients with COVID-19, including when clinicians might consider using one of the products under an EUA.</li></ul>
 
 
 
