--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 11:29 AM</p>
+            <p class="small-text">Last updated&nbsp;December 8, 2020 at 11:40 AM</p>
           
         </div>
       </div>
@@ -837,12 +837,45 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Capacity is based on fire department occupancy limit. In most cases&nbsp;the capacity limit&nbsp;does NOT include staff under the fire code;&nbsp;individual premises will know from their own individualized fire department occupancy limits whether staff are included.&nbsp;Trained staff serve as safety facilitators and help customers evacuate in an emergency.&nbsp;These same staff can assist in&nbsp;the public health emergency&nbsp;to enforce&nbsp;public health protocols. Staff&nbsp;also&nbsp;play an important role by ensuring customers are assisted quickly at the point of sale to avoid crowding and ensure appropriate physical distancing.</p>
+<p>Capacity is based on fire department occupancy limit. In most cases the capacity limit does NOT include staff under the fire code; individual premises will know from their own individualized fire department occupancy limits whether staff are included. Trained staff serve as safety facilitators and help customers evacuate in an emergency. These same staff can assist in the public health emergency to enforce public health protocols. Staff also play an important role by ensuring customers are assisted quickly at the point of sale to avoid crowding and ensure appropriate physical distancing.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
+<h4>Under a Regional Stay Home Order, can hotels, vacation rentals, and short-term lodging sites accept reservations?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>When any California region is under a Regional Stay Home Order, no hotel or lodging entity in California can accept or honor out of state reservations for non-essential travel, unless the reservation is for at least the minimum time period required for quarantine and the persons identified in the reservation will quarantine in the hotel or lodging entity until after that time period has expired.</p>
+<p>Additionally, hotels and lodging entities in a county under a Regional Stay Home Order cannot accept or honor in-state reservations for non-essential travel.</p>
+<p>Hotels or other commercial and residential buildings may offer lodging for essential functions and travel including COVID-19 mitigation and containment measures, treatment measures, accommodation for essential workers, or housing solutions, including measures to protect homeless populations.</p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
