--- a/pages/wordpress-posts/safer-economy.html
+++ b/pages/wordpress-posts/safer-economy.html
@@ -16,7 +16,7 @@ addtositemap: true
 
 
 
-<cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>
+<cagov-reopening data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-see-guidance-text="See guidance for" data-view-all="View all" data-county-label="County" data-activity-label="Activity"></cagov-reopening>
 
 
 
