--- a/es/safer-economy/index.html
+++ b/es/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plan para una economía más segura</h1>
           
-            <p class="small-text">Última actualización&nbsp;8 de diciembre de 2020 a las 11:44 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;8 de diciembre de 2020 a las 12:11 p. m.</p>
           
         </div>
       </div>
