--- a/ko/data-and-tools/index.html
+++ b/ko/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>데이터 및 도구</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 8일 오전 11:43</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 8일 오후 12:11</p>
           
         </div>
       </div>
