--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 9:51 PM</p>
+            <p class="small-text">Last updated&nbsp;December 8, 2020 at 1:34 PM</p>
           
         </div>
       </div>
@@ -271,7 +271,7 @@
 
 
 
-<p>COVID-19 vaccination can’t cause COVID-19. The goal of the vaccines  is to teach our immune systems how to fight the virus that causes COVID-19. Learn more about <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/about-vaccines/how-they-work.html">how COVID-19 vaccines work</a>.</p>
+<p>COVID-19 vaccination can’t cause COVID-19. The goal of the vaccines&nbsp; is to teach our immune systems how to fight the virus that causes COVID-19. Learn more about <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/about-vaccines/how-they-work.html">how COVID-19 vaccines work</a>.</p>
 
 
 
@@ -444,9 +444,6 @@
 <ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19Vaccine.aspx">COVID-19 vaccine planning</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/CDPH-Allocation-Guidelines-for-COVID-19-Vaccine-During-Phase-1A-Recommendations.aspx">Allocation Guidelines for COVID-19 Vaccine During Phase 1A: Recommendations</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Vaccine-Regional-Distribution-First-Shipment.aspx">COVID-19 Vaccine Regional Distribution</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">Vaccines</a></li></ul>
 
 
-
-<!-- Ethnio Activation Code -->
-<script type="text/javascript" language="javascript" src="//ethn.io/26760.js" async="true" defer="" charset="utf-8"></script>
 </div>
     </div>
   </div>
