deploy: f1ae52e5f79c4732499bb6893fdc9a270ab961a6

--- a/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Home meals for seniors</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 8:55 AM</p>
+            <p class="small-text">Last updated&nbsp;December 8, 2020 at 1:38 PM</p>
           
         </div>
       </div>
@@ -247,11 +247,6 @@
 
 
 <p>Reach out to California’s <strong><a href="https://covid19.ca.gov/hotline/">COVID-19 hotline</a> </strong>for questions about coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
-
-
-
-<!-- Ethnio Activation Code -->
-<script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer="" charset="utf-8"></script>
 </div>
     </div>
   </div>
