added lang versions

--- a/pages/translated-posts/safer-economy-vi.html
+++ b/pages/translated-posts/safer-economy-vi.html
@@ -12,7 +12,7 @@ addtositemap: true
 
 
 
-<p>California có kế hoạch chi tiết để giảm bớt sự lây lan của đại dịch COVID-19 tại tiểu bang với các tiêu chí sửa đổi nhằm nới lỏng và thắt chặt các hạn chế hoạt động.</p>    <cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>    <h2 class="has-text-align-center">Hiểu rõ trạng thái quận của quý vị</h2>
+<p>California có kế hoạch chi tiết để giảm bớt sự lây lan của đại dịch COVID-19 tại tiểu bang với các tiêu chí sửa đổi nhằm nới lỏng và thắt chặt các hạn chế hoạt động.</p>    <cagov-reopening data-json="{{pubData[language.id].saferEconomyLang.Table1[0] | dump | escape}}"></cagov-reopening>    <h2 class="has-text-align-center">Hiểu rõ trạng thái quận của quý vị</h2>
 
 
 
