--- a/pages/translated-posts/safer-economy-zh-hant.html
+++ b/pages/translated-posts/safer-economy-zh-hant.html
@@ -12,7 +12,7 @@ addtositemap: true
 
 
 
-<p>加州制定了藍圖，以減緩州內的新型冠狀病毒疫情，並修訂了放寬和加強活動限制的標準。</p>    <cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>    <h2 class="has-text-align-center">了解您所在縣的狀態</h2>
+<p>加州制定了藍圖，以減緩州內的新型冠狀病毒疫情，並修訂了放寬和加強活動限制的標準。</p>    <cagov-reopening data-json="{{pubData[language.id].saferEconomyLang.Table1[0] | dump | escape}}"></cagov-reopening>    <h2 class="has-text-align-center">了解您所在縣的狀態</h2>
 
 
 
