--- a/pages/translated-posts/safer-economy-ar.html
+++ b/pages/translated-posts/safer-economy-ar.html
@@ -12,7 +12,7 @@ addtositemap: true
 
 
 
-<p>وضعت كاليفورنيا مخططًا للحد من انتشار مرض كوفيد-19 في الولاية من خلال معايير منقحة تنظم تخفيف القيود المفروضة على الأنشطة وتشديدها.</p>    <cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>    <h2 class="has-text-align-center">افهم حالة مقاطعتك</h2>
+<p>وضعت كاليفورنيا مخططًا للحد من انتشار مرض كوفيد-19 في الولاية من خلال معايير منقحة تنظم تخفيف القيود المفروضة على الأنشطة وتشديدها.</p>    <cagov-reopening data-json="{{pubData[language.id].saferEconomyLang.Table1[0] | dump | escape}}"></cagov-reopening>    <h2 class="has-text-align-center">افهم حالة مقاطعتك</h2>
 
 
 
