--- a/pages/translated-posts/safer-economy-es.html
+++ b/pages/translated-posts/safer-economy-es.html
@@ -12,7 +12,7 @@ addtositemap: true
 
 
 
-<p>California tiene un plan para abatir la COVID-19 en el estado con criterios actualizados para relajar o endurecer las restricciones a las actividades.</p>    <cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>    <h2 class="has-text-align-center">Entienda la situación de su condado</h2>
+<p>California tiene un plan para abatir la COVID-19 en el estado con criterios actualizados para relajar o endurecer las restricciones a las actividades.</p>    <cagov-reopening data-json="{{pubData[language.id].saferEconomyLang.Table1[0] | dump | escape}}"></cagov-reopening>    <h2 class="has-text-align-center">Entienda la situación de su condado</h2>
 
 
 
