--- a/pages/translated-posts/safer-economy-ko.html
+++ b/pages/translated-posts/safer-economy-ko.html
@@ -12,7 +12,7 @@ addtositemap: true
 
 
 
-<p>캘리포니아는 COVID-19를 줄이기 위해 활동 제한 조치에 대한 완화 및 강화 기준을 개정하여 주 전역에서 시행하는 내용의 청사진을 마련하였습니다.</p>    <cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>    <h2 class="has-text-align-center">해당 카운티 현황 확인</h2>
+<p>캘리포니아는 COVID-19를 줄이기 위해 활동 제한 조치에 대한 완화 및 강화 기준을 개정하여 주 전역에서 시행하는 내용의 청사진을 마련하였습니다.</p>    <cagov-reopening data-json="{{pubData[language.id].saferEconomyLang.Table1[0] | dump | escape}}"></cagov-reopening>    <h2 class="has-text-align-center">해당 카운티 현황 확인</h2>
 
 
 
