--- a/pages/translated-posts/safer-economy-tl.html
+++ b/pages/translated-posts/safer-economy-tl.html
@@ -12,7 +12,7 @@ addtositemap: true
 
 
 
-<p>May bagong blueprint ang California para mabawasan ang COVID-19 sa estado, na may mga nabagong pamantayan para sa pagpapaluwag at paghihigpit ng mga limitasyon sa mga aktibidad.</p>    <cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>    <h2 class="has-text-align-center">Unawain ang status ng iyong county</h2>
+<p>May bagong blueprint ang California para mabawasan ang COVID-19 sa estado, na may mga nabagong pamantayan para sa pagpapaluwag at paghihigpit ng mga limitasyon sa mga aktibidad.</p>    <cagov-reopening data-json="{{pubData[language.id].saferEconomyLang.Table1[0] | dump | escape}}"></cagov-reopening>    <h2 class="has-text-align-center">Unawain ang status ng iyong county</h2>
 
 
 
