--- a/pages/translated-posts/safer-economy-zh-hans.html
+++ b/pages/translated-posts/safer-economy-zh-hans.html
@@ -12,7 +12,7 @@ addtositemap: true
 
 
 
-<p>加州已为减缓州内COVID-19疫情制定蓝图，并修改了放宽和加强各种活动的限制条件。</p>    <cagov-reopening data-counties="data/reopening-counties.json" data-status="data/reopening-status.json" data-title="Find the status of activities in your county" data-county-restrictions-advice="Counties can restrict further. Check your local health department's website for local restrictions." data-industry-guidance-link-text="View industry guidance" data-view-all="View all" data-county-label="County"></cagov-reopening>    <h2 class="has-text-align-center">了解您所在县的状态</h2>
+<p>加州已为减缓州内COVID-19疫情制定蓝图，并修改了放宽和加强各种活动的限制条件。</p>    <cagov-reopening data-json="{{pubData[language.id].saferEconomyLang.Table1[0] | dump | escape}}"></cagov-reopening>    <h2 class="has-text-align-center">了解您所在县的状态</h2>
 
 
 
