deploy: 52eb53f1ad9d1dee4b0c2d29dac0e67be54d8712

--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 8, 2020 at 11:40 AM</p>
+            <p class="small-text">Last updated&nbsp;December 8, 2020 at 3:47 PM</p>
           
         </div>
       </div>
@@ -231,7 +231,7 @@
 
 
 
-<h4 id="icu-capacity"><strong>Click region to see current</strong> ICU bed % availability:  </h4>
+<h4 id="icu-capacity"><strong>Click map to see current</strong> ICU bed availability:  </h4>
 
 
 
@@ -837,7 +837,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Capacity is based on fire department occupancy limit. In most cases the capacity limit does NOT include staff under the fire code; individual premises will know from their own individualized fire department occupancy limits whether staff are included. Trained staff serve as safety facilitators and help customers evacuate in an emergency. These same staff can assist in the public health emergency to enforce public health protocols. Staff also play an important role by ensuring customers are assisted quickly at the point of sale to avoid crowding and ensure appropriate physical distancing.</p>
+<p>Capacity is based on fire department occupancy limit. In most cases&nbsp;the capacity limit&nbsp;does NOT include staff under the fire code;&nbsp;individual premises will know from their own individualized fire department occupancy limits whether staff are included.&nbsp;Trained staff serve as safety facilitators and help customers evacuate in an emergency.&nbsp;These same staff can assist in&nbsp;the public health emergency&nbsp;to enforce&nbsp;public health protocols. Staff&nbsp;also&nbsp;play an important role by ensuring customers are assisted quickly at the point of sale to avoid crowding and ensure appropriate physical distancing.</p>
 
       </div>
     </div>
