--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات المتعلقة بالصناعة لتقليل نسبة المخاطرة</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:37 م الساعة 3 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:39 م الساعة 8 ديسمبر 2020</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<div class="alert alert-warning" role="alert"><h4 class="alert-heading">لقرار إقليمي جديد من أجل البقاء في المنزل </h4><p>لا تزال موجة الإصابة بفيروس كورونا (COVID-19) مستمرة بمعدلات مثيرة للقلق في كاليفورنيا. أعلن النظام الإقليمي للبقاء في المنزل يوم 3 من شهر ديسمبر عام 2020 أنه سوف يحظر التجمعات أيًا كان عددها ويمنع أي نشاطات باستثناء الأعمال الأساسية الحيوية والبيع بالتجزئة شريطة الالتزام بارتداء أقنعة الوجه والتباعد الجسدي أيضاً. اقرأ المزيد عن <a href="/ar/stay-home-except-for-essential-needs/" class="alert-link">القرار الإقليمي من أجل البقاء في المنزل</a>.</p></div>
+<div class="alert alert-warning" role="alert"><h4 class="alert-heading">القرار الإقليمي الجديد للبقاء في المنزل. </h4><p>لا تزال موجة الإصابة مرض كوفيد-19 مستمرة في الزيادة بمعدلات مثيرة للقلق في كاليفورنيا. أعلن القرار الإقليمي للبقاء في المنزل يوم 3 ديسمبر عام 2020 أنه سوف يحظر التجمعات أيًا كان عددها ويمنع أي نشاطات باستثناء الأعمال الأساسية الحيوية والبيع بالتجزئة شريطة الالتزام بارتداء أقنعة الوجه ومراعاة التباعد الجسدي أيضًا. اقرأ المزيد عن <a href="/ar/stay-home-except-for-essential-needs/" class="alert-link">القرار الإقليمي من أجل البقاء في المنزل</a>.</p></div>
 
 
 
@@ -2097,7 +2097,11 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
+
+
+
+
+<p></p>
 </div>
     </div>
   </div>
