--- a/ar/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/ar/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برنامج Great Plates Delivered: وجبات لمنازل كبار السن </h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:27 م الساعة 2 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:38 م الساعة 8 ديسمبر 2020</p>
           
         </div>
       </div>
@@ -246,7 +246,8 @@
 
 
 
-<p>تواصل مع <strong><a href="/ar/hotline/">الخط الساخن لمرض COVID-19</a> </strong>في كاليفورنيا لطرح أسئلة عن فيروس كورونا: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer="" charset="utf-8"></script> </div>
+<p>تواصل مع <strong><a href="/ar/hotline/">الخط الساخن لمرض COVID-19</a> </strong>في كاليفورنيا لطرح أسئلة عن فيروس كورونا: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
+</div>
     </div>
   </div>
   <!-- end contentBlock -->
