--- a/tl/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/tl/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Home meals for seniors</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 2, 2020 sa 2:27 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 8, 2020 sa 1:38 PM</p>
           
         </div>
       </div>
@@ -246,7 +246,8 @@
 
 
 
-<p>Makipag-ugnayan sa <strong><a href="/tl/hotline/">hotline sa COVID-19</a> </strong> ng California para sa mga tanong tungkol sa coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer="" charset="utf-8"></script> </div>
+<p>Makipag-ugnayan sa <strong><a href="/tl/hotline/">hotline sa COVID-19</a> </strong> ng California para sa mga tanong tungkol sa coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
+</div>
     </div>
   </div>
   <!-- end contentBlock -->
