--- a/vi/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/vi/restaurants-deliver-home-meals-for-seniors/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Bữa ăn tại nhà dành cho người cao niên</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;2 tháng 12, 2020 lúc 14:27</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;8 tháng 12, 2020 lúc 13:38</p>
           
         </div>
       </div>
@@ -248,7 +248,8 @@
 
 
 
-<p>Hãy gọi đến <strong><a href="/vi/hotline/">đường dây nóng COVID-19</a> </strong>của California nếu quý vị có câu hỏi về vi-rút corona: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer="" charset="utf-8"></script> </div>
+<p>Hãy gọi đến <strong><a href="/vi/hotline/">đường dây nóng COVID-19</a> </strong>của California nếu quý vị có câu hỏi về vi-rút corona: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
+</div>
     </div>
   </div>
   <!-- end contentBlock -->
