--- a/zh-hans/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/zh-hans/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered：为年长者送餐到家</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月2日, 下午2:27</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月8日, 下午1:38</p>
           
         </div>
       </div>
@@ -246,7 +246,8 @@
 
 
 
-<p>有关冠状病毒方面的问题，请拨打加州<strong><a href="/zh-hans/hotline/">新型冠状病毒热线</a></strong>：<a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL)。 </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer="" charset="utf-8"></script> </div>
+<p>有关冠状病毒方面的问题，请拨打加州<strong><a href="/zh-hans/hotline/">新型冠状病毒热线</a></strong>：<a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL)。 </p>
+</div>
     </div>
   </div>
   <!-- end contentBlock -->
