--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 8, 2020 at 9:40 PM</p>
+            <p class="small-text">Last updated&nbsp;December 9, 2020 at 6:11 AM</p>
           
         </div>
       </div>
@@ -285,7 +285,7 @@
 <p>The following sectors will have additional modifications in addition to 100% masking and physical distancing:</p>
 <ul><li><strong>Outdoor recreational facilities:</strong> Allow outdoor operation only for the purpose of facilitating physically distanced personal health and wellness through outdoor exercise, without any food, drink or alcohol sales. Additionally, overnight stays at campgrounds will not be permitted.</li><li><strong>Retail: </strong>Allow indoor operation at 20% capacity, and 35% of capacity for standalone grocery stores, with entrance metering and no eating or drinking in the stores. Additionally, special hours should be instituted for seniors and others with chronic conditions or compromised immune systems.&nbsp;</li><li><strong>Shopping centers</strong>: Allow indoor access at 20% capacity with entrance metering and no eating or drinking in the stores. Additionally, special hours should be instituted for seniors and others with chronic conditions or compromised immune systems.</li><li><strong>Hotels and lodging:</strong> Allow for COVID-19 mitigation and containment measures, treatment measures, provide accommodation for essential workers, or providing housing solutions, including measures to protect homeless populations.</li><li><strong>Restaurants: </strong>Allow only for take out or delivery.</li><li><strong>Offices: </strong>Allow remote only except for critical infrastructure sectors where remote working is not possible.&nbsp;</li><li><strong>Places of worship and political expression: </strong>Allow outdoor activities only.</li><li><strong>Entertainment production: </strong>Industries, studios, and other related establishments such as establishments that provide content for professional broadcast can operate without live audiences.</li></ul>
 <p>In any region that triggers a Regional Stay Home Order because it drops below 15% ICU capacity all operations in the following sectors must be closed (except to the extent that their operations fall within critical infrastructure):</p>
-<ul><li>Indoor and outdoor playgrounds</li><li>Hair salons and barbershops</li><li>Personal care services</li><li>Museums, zoos, and aquariums</li><li>Movie theaters (except drive-in)</li><li>Wineries, bars, breweries, and distilleries</li><li>Family entertainment centers</li><li>Cardrooms and satellite wagering</li><li>Limited services</li><li>Live audience sports</li><li>Amusement parks</li></ul>
+<ul><li>Hair salons and barbershops</li><li>Personal care services</li><li>Museums, zoos, and aquariums</li><li>Movie theaters (except drive-in)</li><li>Wineries, bars, breweries, and distilleries</li><li>Family entertainment centers</li><li>Cardrooms and satellite wagering</li><li>Limited services</li><li>Live audience sports</li><li>Amusement parks</li></ul>
 
       </div>
     </div>
@@ -444,12 +444,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Are playgrounds open? </strong></h4>
+<h4><strong>Are playgrounds open?&nbsp;</strong></h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Playgrounds may remain open to facilitate physically distanced personal health and wellness through outdoor exercise.  Playgrounds located on schools that remain open for in-person instruction, and not accessible by the general public, may remain open and must follow <a rel="noreferrer noopener" href="https://gcc02.safelinks.protection.outlook.com/?url=https%3A%2F%2Ffiles.covid19.ca.gov%2Fpdf%2Fguidance-schools--en.pdf&amp;data=04%7C01%7CMichelle.Baass%40chhs.ca.gov%7C91f93088a4e34361c71108d89bec7660%7C265c2dcd2a6e43aab2e826421a8c8526%7C0%7C1%7C637430787473462555%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&amp;sdata=Bx7iIPxP%2FvaP8oNf54hFxEv1cZOXwgAJs4vYRMhez5Y%3D&amp;reserved=0" target="_blank">guidance for schools and school-based programs</a>.</p>
+<p>Playgrounds may remain open to facilitate physically distanced personal health and wellness through outdoor exercise.&nbsp; Playgrounds located on schools that remain open for in-person instruction, and not accessible by the general public, may remain open and must follow&nbsp;<a rel="noreferrer noopener" href="https://gcc02.safelinks.protection.outlook.com/?url=https%3A%2F%2Ffiles.covid19.ca.gov%2Fpdf%2Fguidance-schools--en.pdf&amp;data=04%7C01%7CMichelle.Baass%40chhs.ca.gov%7C91f93088a4e34361c71108d89bec7660%7C265c2dcd2a6e43aab2e826421a8c8526%7C0%7C1%7C637430787473462555%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&amp;sdata=Bx7iIPxP%2FvaP8oNf54hFxEv1cZOXwgAJs4vYRMhez5Y%3D&amp;reserved=0" target="_blank">guidance for schools and school-based programs</a>.</p>
 
       </div>
     </div>
