--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 9, 2020 at 8:06 AM</p>
+            <p class="small-text">Last updated&nbsp;December 9, 2020 at 9:40 AM</p>
           
         </div>
       </div>
@@ -449,7 +449,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Playgrounds may remain open to facilitate physically distanced personal health and wellness through outdoor exercise.&nbsp; Playgrounds located on schools that remain open for in-person instruction, and not accessible by the general public, may remain open and must follow&nbsp;<a rel="noreferrer noopener" href="https://gcc02.safelinks.protection.outlook.com/?url=https%3A%2F%2Ffiles.covid19.ca.gov%2Fpdf%2Fguidance-schools--en.pdf&amp;data=04%7C01%7CMichelle.Baass%40chhs.ca.gov%7C91f93088a4e34361c71108d89bec7660%7C265c2dcd2a6e43aab2e826421a8c8526%7C0%7C1%7C637430787473462555%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&amp;sdata=Bx7iIPxP%2FvaP8oNf54hFxEv1cZOXwgAJs4vYRMhez5Y%3D&amp;reserved=0" target="_blank">guidance for schools and school-based programs</a>.</p>
+<p>Playgrounds may remain open to facilitate physically distanced personal health and wellness through outdoor exercise.  Playgrounds located on schools that remain open for in-person instruction, and not accessible by the general public, may remain open and must follow <a href="https://files.covid19.ca.gov/pdf/guidance-schools--en.pdf" target="_blank" rel="noreferrer noopener">guidance for schools and school-based programs (PDF)</a>.</p>
 
       </div>
     </div>
