deploy: 182ffe2e88bc97da4c2463068b42ef7c189650bd

--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 6:54 AM</p>
+            <p class="small-text">Last updated&nbsp;December 10, 2020 at 6:34 AM</p>
           
         </div>
       </div>
@@ -446,7 +446,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>You can participate by adding your phone to California’s exposure notification system. University of California, San Diego coordinates the California COVID Notify program.<strong> </strong>For details, see the <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a> website or call <a href="Tel:888-421-9457">888-421-9457</a> (888-4C19-HLP). <strong>&nbsp;Call in number will be live on Thursday (12/10/2020).</strong></p>
+<p>You can participate by adding your phone to California’s exposure notification system. University of California, San Diego coordinates the California COVID Notify program.<strong> </strong>For details, see the <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a> website or call <a href="Tel:888-421-9457">888-421-9457</a> (888-4C19-HLP). </p>
 
       </div>
     </div>
