--- a/hotline/index.html
+++ b/hotline/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 Hotline</h1>
           
-            <p class="small-text">Last updated&nbsp;December 7, 2020 at 6:55 AM</p>
+            <p class="small-text">Last updated&nbsp;December 10, 2020 at 7:34 AM</p>
           
         </div>
       </div>
@@ -199,7 +199,7 @@
 
 
 
-<h3><a href="Tel:888-421-9457">888-421-9457&nbsp;</a><strong>&nbsp;(888-4C19-HLP)</strong> &#8211; Number will be live on Thursday (12/10/2020).</h3>
+<h3><a href="Tel:888-421-9457">888-421-9457 </a><strong> (888-4C19-HLP)</strong></h3>
 
 
 
@@ -227,7 +227,7 @@
 
 
 <ol>
-<li>If you’re looking for general information about state COVID-19 resources: <strong>use <a href="https://covid19.ca.gov/">covid19.ca.gov</a> or call <strong><a href="tel:833-422-4255">833-422-4255</a></strong>&nbsp;</strong></li>
+<li>If you’re looking for general information about state COVID-19 resources: <strong>use <a href="https://covid19.ca.gov/">covid19.ca.gov</a> or call <strong><a href="tel:833-422-4255">833-422-4255</a></strong> </strong></li>
 <li><span style="font-weight: 400;">If you’re looking for California COVID Notify, Google and Apple&#8217;s exposure notification system: </span><b>visit </b><a href="https://canotify.uchealth.edu/ucsdh/"><span style="font-weight: 400;">California COVID Notify</span></a> <b>or call</b><span style="font-weight: 400;"><a href="http://Tel:888-421-9457" data-wplink-url-error="true"> 888-421-9457</a>. </span></li>
 <li>If you’re looking for community services and support: <strong>Call <a href="tel:211">211</a></strong></li>
 <li>If you’re looking for medicine and medical attention: <strong>Call your healthcare provider or pharmacy</strong></li>
