--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
 
 
 
-<p>CA Notify lets you know if you might have been exposed to COVID-19 while preserving your privacy. CA Notify goes live on Thursday, December 10.</p>
+<p>CA Notify lets you know if you might have been exposed to COVID-19 while preserving your privacy.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://canotify.ca.gov">Learn more before it launches</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://canotify.ca.gov">Add to your phone</a></p>
 
 						</div>
 					</div>
