--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مخطط الاقتصاد الأكثر أمانًا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;10:49 ص الساعة 10 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:55 م الساعة 10 ديسمبر 2020</p>
           
         </div>
       </div>
