--- a/ko/latest-news/index.html
+++ b/ko/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19에 대한 최신 뉴스</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 10일 오전 10:49</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 10일 오후 1:55</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-329.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--a664d60e6fdc8416c67e0420183dbdd6 -->December 9, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today  announced the most recent statistics on COVID-19, including data on intensive care unit (ICU) capacity across the state.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-328.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
