Added missing captions to translated files that were missed last translation pass.

--- a/pages/translated-posts/equity-ar.html
+++ b/pages/translated-posts/equity-ar.html
@@ -165,6 +165,10 @@ addtositemap: false
           <li data-label="chartFilterLegendPfxState--deaths">حالات وفاة على نطاق الولاية لكل 100 ألف شخص: </li>
           <li data-label="chartFilterLegendPfxState--tests">اختبارات على نطاق الولاية لكل 100 ألف شخص: </li>
           <li data-label="chartToolTip-caption"><span class="highlight-data">placeholderDEMO_CAT</span> يعاني الأفراد من <span class="highlight-data">placeholderMETRIC_100K</span> placeholderFilterScope لكل 100 ألف شخص من نفس الجنس والعرق.</li>
+          <li data-label="applied-suppression-total">لحماية خصوصية الأشخاص، لا نعرض أي بيانات يرجع ذلك إلى وجود حالات أو اختبارات
+              قليلة جدًا في هذه المجموعة.</li>
+          <li data-label="applied-suppression-population">لحماية خصوصية الأشخاص، لا نعرض أي بيانات يرجع ذلك إلى وجود أقل من 20.000
+              في هذه المجموعة. </li>
         </ul>       </cagov-chart-re-100k>     </div>
   </div>
 </div>
