--- a/pages/translated-posts/equity-ko.html
+++ b/pages/translated-posts/equity-ko.html
@@ -165,6 +165,10 @@ addtositemap: false
           <li data-label="chartFilterLegendPfxState--deaths">100,000명 당 주 전역 사망 건수: </li>
           <li data-label="chartFilterLegendPfxState--tests">100,000명 당 주 전역 검사 건수: </li>
           <li data-label="chartToolTip-caption"><span class="highlight-data">placeholderDEMO_CAT</span> 해당 계층의 경우 동일한 인종과 민족 100,000명에 대한 <span class="highlight-data">placeholderMETRIC_100K</span> placeholder필터링 범위가 있습니다.</li>
+          <li data-label="applied-suppression-total">개인 정보 보호를 위해 어떠한 데이터도 표시하지 않고 있습니다. 그 이유는 해당 그룹 내 사례 또는 검사 건수가 너무 적기 때문입니다.
+            </li>
+          <li data-label="applied-suppression-population">개인 정보 보호를 위해 어떠한 데이터도 표시하지 않고 있습니다. 그 이유는 해당 그룹 내 인원수가 20,000명 미만이기
+              때문입니다.</li>
         </ul>       </cagov-chart-re-100k>     </div>
   </div>
 </div>
