--- a/pages/translated-posts/equity-tl.html
+++ b/pages/translated-posts/equity-tl.html
@@ -165,6 +165,10 @@ addtositemap: false
           <li data-label="chartFilterLegendPfxState--deaths">Pagkamatay sa buong estado sa bawat 100k: </li>
           <li data-label="chartFilterLegendPfxState--tests">Pagsusuri sa buong estado sa bawat 100k: </li>
           <li data-label="chartToolTip-caption"><span class="highlight-data">placeholderDEMO_CAT</span> tao ang <span class="highlight-data">placeholderMETRIC_100K</span> placeholderFilterScope para sa 100k tao ng parehong lahi at etnisidad.</li>
+          <li data-label="applied-suppression-total">Para protektahan ang privacy ng mga tao, hindi kami magpapakita ng anumang
+              data. Ito ay dahil may masyadong kaunting kaso o pagsusuri sa grupong ito.</li>
+          <li data-label="applied-suppression-population">Para protektahan ang privacy ng mga tao, hindi kami magpapakita ng
+              anumang data. Ito ay dahil wala pang 20,000 tao ang nasa grupong ito.</li>
         </ul>       </cagov-chart-re-100k>     </div>
   </div>
 </div>
