--- a/pages/translated-posts/equity-zh-hant.html
+++ b/pages/translated-posts/equity-zh-hant.html
@@ -165,6 +165,8 @@ addtositemap: false
           <li data-label="chartFilterLegendPfxState--deaths">全州每100k人中的死亡數： </li>
           <li data-label="chartFilterLegendPfxState--tests">全州每100k人中的檢測數： </li>
           <li data-label="chartToolTip-caption"><span class="highlight-data">placeholderDEMO_CAT</span> people have <span class="highlight-data">placeholderMETRIC_100K</span> placeholderFilterScope for 100k people of the same race and ethnicity.</li>
+          <li data-label="applied-suppression-total">為保護民眾隱私，恕不顯示任何數據。這是因為這一群體的病例數或檢測數過少。</li>
+          <li data-label="applied-suppression-population">為保護民眾隱私，恕不顯示任何數據。這是因為這一群體的人數少於20,000。</li>
         </ul>       </cagov-chart-re-100k>     </div>
   </div>
 </div>
