--- a/pages/translated-posts/equity-es.html
+++ b/pages/translated-posts/equity-es.html
@@ -165,6 +165,10 @@ addtositemap: false
           <li data-label="chartFilterLegendPfxState--deaths">Decesos estatales por cada 100 mil: </li>
           <li data-label="chartFilterLegendPfxState--tests">Pruebas estatales por cada 100 mil: </li>
           <li data-label="chartToolTip-caption"><span class="highlight-data">placeholderDEMO_CAT</span> personas tienen <span class="highlight-data">placeholderMETRIC_100K</span> placeholderFilterScope por cada 100 mil personas de la misma raza y grupo étnico.</li>
+          <li data-label="applied-suppression-total">Para proteger la privacidad de las personas, no mostramos ningún dato. Esto
+              es porque hay muy pocos casos o pruebas en este grupo.</li>
+          <li data-label="applied-suppression-population">Para proteger la privacidad de las personas, no mostramos ningún dato.
+              Esto es porque en este grupo hay menos de 20,000 personas en este grupo.</li>
         </ul>       </cagov-chart-re-100k>     </div>
   </div>
 </div>
