--- a/pages/translated-posts/equity-vi.html
+++ b/pages/translated-posts/equity-vi.html
@@ -165,6 +165,10 @@ addtositemap: false
           <li data-label="chartFilterLegendPfxState--deaths">Số ca tử vong trên 100 nghìn người của toàn tiểu bang: </li>
           <li data-label="chartFilterLegendPfxState--tests">Số người xét nghiệm trên 100 nghìn người của toàn tiểu bang: </li>
           <li data-label="chartToolTip-caption"><span class="highlight-data">placeholderDEMO_CAT</span> những người có <span class="highlight-data">placeholderMETRIC_100K</span> placeholderFilterScope trên 100 nghìn người thuộc cùng chủng tộc và sắc tộc.</li>
+          <li data-label="applied-suppression-total">Để bảo vệ quyền riêng tư của mọi người, chúng tôi sẽ không hiển thị bất kỳ dữ
+              liệu nào. Nguyên nhân là vì có quá ít ca mắc hoặc ca xét nghiệm trong nhóm này.</li>
+          <li data-label="applied-suppression-population">Để bảo vệ quyền riêng tư của mọi người, chúng tôi sẽ không hiển thị bất
+              kỳ dữ liệu nào. Nguyên nhân là vì có ít hơn 20,000 người trong nhóm này.</li>
         </ul>       </cagov-chart-re-100k>     </div>
   </div>
 </div>
