--- a/pages/translated-posts/equity-zh-hans.html
+++ b/pages/translated-posts/equity-zh-hans.html
@@ -165,6 +165,8 @@ addtositemap: false
           <li data-label="chartFilterLegendPfxState--deaths">全州每100k人中的死亡数： </li>
           <li data-label="chartFilterLegendPfxState--tests">全州每100k人中的检测数： </li>
           <li data-label="chartToolTip-caption"><span class="highlight-data">placeholderDEMO_CAT</span> people have <span class="highlight-data">placeholderMETRIC_100K</span> placeholderFilterScope for 100k people of the same race and ethnicity.</li>
+          <li data-label="applied-suppression-total">为保护民众隐私，恕不显示任何数据。这是因为这一群体的病例数或检测数过少。</li>
+          <li data-label="applied-suppression-population">为保护民众隐私，恕不显示任何数据。这是因为这一群体的人数少于20,000。</li>
         </ul>       </cagov-chart-re-100k>     </div>
   </div>
 </div>
